--- a/workflow-templates/cirkel-microservice.yml
+++ b/workflow-templates/cirkel-microservice.yml
@@ -52,6 +52,8 @@ jobs:
   build:
     name: Build Application
     runs-on: ubuntu-22.04
+    permissions:
+      packages: write
     env:
       IMAGE_TAG: ${{ needs.setup-job-env.outputs.image_tag }}
     needs:
@@ -62,8 +64,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.REGISTRY_URL }}
-          username: ${{ secrets.GH_USER }}
-          password: ${{ secrets.GH_PERSONAL_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker build and push into repository
         uses: docker/build-push-action@v4
