--- a/workflow-templates/cirkel-microservice.yml
+++ b/workflow-templates/cirkel-microservice.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set env variable
         id: set-variable
         shell: bash
@@ -52,7 +53,7 @@ jobs:
             echo "namespace=cirkel" >> $GITHUB_OUTPUT
           fi
 
-          if [[ $branch =~ ^(feature|fix)\/[a-zA-Z0-9_-]{0,50} ]]; then
+          if [[ $branch =~ ^(feature|fix|ci|bugs|hotfix|feat)\/[a-zA-Z0-9_-]{0,50} ]]; then
             echo "image_tag=${{ github.sha }}" >> $GITHUB_OUTPUT
             echo "file_values=values-dev.yaml" >> $GITHUB_OUTPUT
             echo "kube_context=pg" >> $GITHUB_OUTPUT
@@ -74,6 +75,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Github Container Registry
         uses: docker/login-action@v3
         with:
@@ -107,6 +109,7 @@ jobs:
         - uses: actions/checkout@v4
           with:
             ref: ${{ github.ref }}
+            token: ${{ secrets.GITHUB_TOKEN }}
         - name: Deploy with Helm Chart
           uses: wahyd4/kubectl-helm-action@master
           env:
